# csv-parquet-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
converter/: __init__.py  cli.py  csv_reader.py  parquet_writer.py  schema.py
tests/: test_converter.py
