[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-parquet-converter"
version = "0.1.0"
description = "CLI tool for CSV to Parquet conversion with schema inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
csv2parquet = "converter.cli:main"
